# easyrecon

./: LICENSE  README.md  display.py  easyrecon.py  easyrecon.yaml  install.sh  pyproject.toml  requirements.txt
easyrecon/modules/: live.py
easyrecon/utils/: merger.py  registry.py
modules/: __init__.py  categorize.py  live.py  report.py  subdomains.py  urls.py
results/testphp.vulnweb.com_2026-03-14_15-15/processed/: all_urls.txt
results/testphp.vulnweb.com_2026-03-14_15-15/raw/: gau.txt  waybackurls.txt
results/testphp.vulnweb.com_2026-03-14_15-16/: report.md
results/testphp.vulnweb.com_2026-03-14_15-16/categorized/: admin.txt  api.txt  backup.txt  js.txt  json.txt  login.txt  params.txt  php.txt  sensitive.txt  upload.txt  xml.txt
utils/: __init__.py  checker.py  config.py  display.py  merger.py  registry.py  runner.py
